--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
  
 </head>
-<body class="bg-gray-50 text-black dark:bg-gray-900 dark:text-white">
+<body class="bg-gray-50">
     <!-- Navbar -->
      <nav class="container mx-auto px-8 py-6">
         <div class="flex items-center justify-between">
