--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
     </script>
 </head>
-<body class="font-poppins bg-gray-50 scroll-smooth">
+<body class="font-poppins scroll-smooth">
     <!-- Navbar -->
      <nav class="container mx-auto px-8 py-6">
         <div class="flex items-center justify-between">
